<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:gravity="center"
    android:orientation="vertical" >
    <Button android:id="@+id/btn_print_text"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/print_text_btn"/>
    <Button android:id="@+id/btn_print_image"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/print_image_btn"/>
    <EditText android:id="@+id/edt_barcode_content"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:hint="@string/barcode_content_edt"/>
    <Button android:id="@+id/btn_print_barcode"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/print_barcode_btn"/>
    <Button android:id="@+id/btn_print_smallticket"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/print_smallticket_btn"/>
    <Button android:id="@+id/btn_print_table"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/print_table_btn"/>
    <Button android:id="@+id/btn_back"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dip"
        android:text="@string/back_btn"/>
</LinearLayout>